src/objects/ProjectDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccountRefs__c</fullName>
        <label>取引先</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignUser__c</fullName>
        <label>アサイン</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalendarFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>カレンダー非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterRef__c</fullName>
        <label>Chatter情報</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>進捗メモ</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreateType__c</fullName>
        <label>作成タイプ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CssStyle__c</fullName>
        <label>カスタム様式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depart__c</fullName>
        <label>RFU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>部署</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>取締役</fullName>
                </value>
                <value>
                    <fullName>ゲストリレーション</fullName>
                </value>
                <value>
                    <fullName>ドライバー</fullName>
                </value>
                <value>
                    <fullName>調理</fullName>
                </value>
                <value>
                    <fullName>フロント</fullName>
                </value>
                <value>
                    <fullName>接客</fullName>
                </value>
                <value>
                    <fullName>清掃</fullName>
                </value>
                <value>
                    <fullName>洗い場</fullName>
                </value>
                <value>
                    <fullName>番頭</fullName>
                </value>
                <value>
                    <fullName>研修生</fullName>
                </value>
                <value>
                    <fullName>営業部門</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DueEndDt__c</fullName>
        <label>予定終了日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DueStartDt__c</fullName>
        <label>予定開始日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndDt__c</fullName>
        <label>終了</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>活動タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ToDo</fullName>
                </value>
                <value>
                    <fullName>行動</fullName>
                    <default>true</default>
                    <label>行動</label>
                </value>
                <value>
                    <fullName>明細</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expanded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>展開</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupCode__c</fullName>
        <label>グループコード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>優先度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>高</fullName>
                </value>
                <value>
                    <fullName>中</fullName>
                </value>
                <value>
                    <fullName>低</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCantUpdFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>変更不可フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerUser__c</fullName>
        <label>マネージャー</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MarkType__c</fullName>
        <label>マーキングタイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>▼</fullName>
                </value>
                <value>
                    <fullName>●</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <label>マーキング情報</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NextRowNo__c</fullName>
        <label>後明細No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <label>並び順</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親プロジェクト明細</label>
        <referenceTo>ProjectDetail__c</referenceTo>
        <relationshipLabel>プロジェクト明細</relationshipLabel>
        <relationshipName>ProjectRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentComplete__c</fullName>
        <label>進捗</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreRowNo__c</fullName>
        <label>前明細No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectMain__c</fullName>
        <label>プロジェクト</label>
        <referenceTo>ProjectMain__c</referenceTo>
        <relationshipLabel>プロジェクト明細</relationshipLabel>
        <relationshipName>ProjectDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <label>処理タイプ</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurrenceActivityId__c</fullName>
        <label>繰り返し番号</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDt__c</fullName>
        <label>開始</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>概要</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskId__c</fullName>
        <externalId>true</externalId>
        <label>参照ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>利用対象外</inlineHelpText>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectUserRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserRefs__c</fullName>
        <label>複数担当者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>プロジェクト明細</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>明細No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>